Get correct result output to DOM

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
                 </label>
                 <br />
                 <button type="submit" class="submit-button">Do it!</button>
-                <p>New Sentence: <span id="new-sentence"></span></p>
+                <p id="result" class="hidden">Hello Neighbor, <br /><span id="new-sentence"></span></p>
                 <br />
             </div>
         </form>
-        <p>Hello Neighbor, <span id="total-count"></span></p>
-    </div>
     </div>
 </body>
 
