--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en-US">
 
 <head>
-    <title>Text Analyzer</title>
+    <title>Mr. Roboger's Neighborhood</title>
     <script src="js/scripts.js"></script>
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
+    <h1>Mr. Roboger's Neighborhood</h1>
     <div class="container">
-        <h2>H2</h2>
+        <h2>Enter a Number and get a Neighborly Response</h2>
         <form id="num-replacer">
             <div class="form-group">
-                <p>Enter a number and get a neighborly return:</p>
+                <p>Enter a number:</p>
                 <label for="number">
                     <input type="number" id="number" name="number" class="form-control">
                 </label>
