--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
     <div class="container">
         <h2>Enter a Number and get a Neighborly Response</h2>
         <form id="num-replacer">
-            <div class="form-group">
-                <p>Enter a number:</p>
+            <p>Enter a number:</p>
+            <div id="input-container">
                 <label for="number">
-                    <input type="number" id="number" name="number" class="form-control">
+                    <input type="number" id="number" name="number">
                 </label>
-                <br />
                 <button type="submit" class="submit-button">Do it!</button>
                 <p id="result" class="hidden">Hello Neighbor, <br /><span id="new-sentence"></span></p>
-                <br />
             </div>
         </form>
     </div>
