Complete README.md

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Mr. Roboger's Neighborhood</h1>
-    <div class="container">
+    <div class="main-container">
         <h2>Enter a Number and get a Neighborly Response</h2>
         <form id="num-replacer">
             <p>Enter a number:</p>
@@ -18,9 +18,12 @@
                     <input type="number" id="number" name="number">
                 </label>
                 <button type="submit" class="submit-button">Do it!</button>
-                <p id="result" class="hidden">Hello Neighbor, <br /><span id="new-sentence"></span></p>
             </div>
         </form>
+        <div id="result-container" class="hidden">
+            <p id="result">H3ll0 N3ighb0r,</p>
+            <p><span id="new-sentence"><span></p>
+        </div>
     </div>
 </body>
 
