--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Mr. Roboger's Neighborhood</h1>
+    <h1 class="background">Mr. Roboger's Neighborhood</h1>
     <div class="main-container">
         <h2>Enter a Number and get a Neighborly Response</h2>
         <form id="num-replacer">
