Add light mode and dark mode buttons and functionality

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en-US">
 
 <head>
+    <div class="mode-buttons">
+        <button id="dark-mode-button">Dark</button>
+        <button id="light-mode-button">Light</button>
+    </div>
     <title>Mr. Roboger's Neighborhood</title>
     <script src="js/scripts.js"></script>
     <link href="css/styles.css" rel="stylesheet">
@@ -21,8 +25,10 @@
             </div>
         </form>
         <div id="result-container" class="hidden">
-            <p id="result">H3ll0 N3ighb0r,</p>
-            <p><span id="new-sentence"><span></p>
+            <div id="test" class="">
+                <p id="result">H3ll0 N3ighb0r,</p>
+                <p><span id="new-sentence"><span></p>
+            </div>
         </div>
     </div>
 </body>
