Almost fix the response background dark/light mode switch

--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
             </div>
         </form>
         <div id="result-container" class="hidden">
-            <div id="test" class="">
-                <p id="result">H3ll0 N3ighb0r,</p>
-                <p><span id="new-sentence"><span></p>
-            </div>
+            <p id="result">H3ll0 N3ighb0r,</p>
+            <p><span id="new-sentence" class="dark-mode"><span></p>
         </div>
     </div>
 </body>
