--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en-US">
 
 <head>
-    <div class="mode-buttons">
-        <button id="dark-mode-button">Dark</button>
-        <button id="light-mode-button">Light</button>
-    </div>
     <title>Mr. Roboger's Neighborhood</title>
     <script src="js/scripts.js"></script>
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
+    <div id="buttons" class="mode-buttons">
+        <button id="dark-mode-button">Dark</button>
+        <button id="light-mode-button">Light</button>
+    </div>
     <h1 class="background">Mr. Roboger's Neighborhood</h1>
     <div class="main-container">
         <h2>Enter a Number and get a Neighborly Response</h2>
         <form id="num-replacer">
-            <p>Enter a number:</p>
             <div id="input-container">
+                <p>Enter a number:</p>
                 <label for="number">
                     <input type="number" id="number" name="number">
                 </label>
@@ -26,7 +26,7 @@
         </form>
         <div id="result-container" class="hidden">
             <p id="result">H3ll0 N3ighb0r,</p>
-            <p><span id="new-sentence" class="dark-mode"><span></p>
+            <p><span id="new-sentence"><span></p>
         </div>
     </div>
 </body>
